--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,210 @@
 body {
+  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.quiz {
+  padding: 80px 0px;
+  min-height: 100vh;
+  background: rgba(238, 229, 211, 1);
+}
+
+.container {
+  padding: 0 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.quiz-wrapper {
+  padding: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: white;
+  margin-top: 40px;
+}
+
+.disabled {
+  pointer-events: none;
+}
+
+.check-answer-btn.disabled {
+  display: none;
+}
+
+.correct {
+  background-color: rgba(0, 128, 0, 0.46) !important;
+}
+
+.wrong {
+  background-color: rgba(255, 0, 0, 0.41) !important;
+}
+
+.question-card {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+.question-number {
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
+.question-text {
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.answer-options {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.answer-options li {
+  margin-bottom: 10px;
+}
+
+.answer-options label {
+  font-size: 17px;
+  display: block;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.answer-options input[type="radio"] {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.check-answer-btn {
+  font-size: 17px;
+  margin-top: 20px;
+  padding: 14px 20px;
+  border-radius: 5px;
+  background-color: #2b292d;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+.check-answer-btn.left {
+  display: block;
+}
+.check-answer-btn:hover {
+  background-color: #000;
+}
+
+/* карточка приветствия */
+
+.welcome-card {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.form {
+  width: 100%;
+  max-width: 300px;
+  display: inline-block;
+  text-align: left;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+button[type="submit"] {
+  display: block;
+  margin: 20px auto 0;
+  cursor: pointer;
+}
+
+button[type="submit"].disabled {
+  display: block;
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+/* карточка поздравления */
+
+.congratulations-card {
+  text-align: center;
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 40px;
+  margin: 20px;
+}
+
+.congratulations-card h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #4c4c4c;
+}
+
+.congratulations-card p {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #4c4c4c;
+}
+
+.congratulations-card .score {
+  font-weight: bold;
+  color: #24a343;
+}
+
+.congratulations-card .fireworks {
+  width: 100px;
+  margin: 20px auto;
+  display: block;
+}
+
+.congratulations-card .get-certificate-button {
+  background-color: #24a343;
+  color: #ffffff;
+  border: none;
 }
