--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   height: 100vh;
+  position: relative;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -8,15 +9,49 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "snowstorm";
+  src: url("../public/snowstorm.ttf") format("truetype");
+}
+
+.p-2 {
+  padding: 24px 0;
+}
+
+.img-cover {
+  background-image: url("./assets/bg-img.jpg");
+  background-position: bottom;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* backdrop-filter: blur(10px); */
+}
+.overflow {
+  backdrop-filter: blur(5px);
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .quiz {
-  padding: 80px 0px;
+  display: flex;
+  width: 100%;
   min-height: 100vh;
-  background: rgba(238, 229, 211, 1);
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .container {
@@ -25,13 +60,13 @@ code {
   margin: 0 auto;
   position: relative;
 }
+.container--header {
+  max-width: 1240px;
+}
 
 .quiz-wrapper {
-  padding: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  background-color: white;
-  margin-top: 40px;
+  overflow-y: auto;
+  margin: 120px 0;
 }
 
 .disabled {
@@ -40,6 +75,9 @@ code {
 
 .check-answer-btn.disabled {
   display: none;
+}
+a.check-answer-btn {
+  text-decoration: none !important;
 }
 
 .correct {
@@ -50,33 +88,33 @@ code {
   background-color: rgba(255, 0, 0, 0.41) !important;
 }
 
-.question-card {
+.card {
   border: 1px solid #ddd;
   border-radius: 10px;
-  padding: 20px;
+  padding: 60px;
   margin-bottom: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgb(255, 253, 248);
   font-family: Arial, sans-serif;
 }
 
+.card.card--center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .question-number {
+  font-style: italic;
   font-size: 18px;
   font-weight: normal;
   margin-bottom: 10px;
 }
 
-.question-text {
-  font-size: 20px;
-  line-height: 130%;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
 .answer-options {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .answer-options li {
@@ -99,42 +137,84 @@ code {
 }
 
 .check-answer-btn {
-  font-size: 17px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-transform: none;
   margin-top: 20px;
   padding: 14px 20px;
-  border-radius: 5px;
-  background-color: #2b292d;
+  border-radius: 3px;
+  background-color: #9a321b;
   color: #fff;
   border: none;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 150%;
 }
 .check-answer-btn.left {
   display: block;
 }
 .check-answer-btn:hover {
-  background-color: #000;
+  background-color: #7e220d;
 }
 
 /* карточка приветствия */
-
-.welcome-card {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  text-align: center;
-}
-
 h1 {
   margin-top: 0;
 }
+.title-h1 {
+  text-transform: uppercase;
+  font-family: "snowstorm";
+  color: #b32218;
+  font-size: 46px;
+  line-height: 130%;
+}
+
+.text--quiz {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 26px;
+  font-weight: 900;
+  line-height: 130%;
+  color: #000;
+}
+
+.title-h2 {
+  font-family: "snowstorm";
+  color: #000;
+  font-size: 24px;
+  line-height: 130%;
+}
+
+.title-h2 span {
+  color: #b32218;
+}
+
+.text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-transform: none;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 150%;
+  color: #000;
+}
+
+.text--center {
+  text-align: center;
+}
 
 .form {
+  margin-top: 25px;
   width: 100%;
-  max-width: 300px;
+  max-width: 450px;
   display: inline-block;
   text-align: left;
 }
@@ -155,6 +235,7 @@ input[type="email"] {
   border-radius: 3px;
   border: 1px solid #ccc;
   font-size: 16px;
+  min-height: 50px;
 }
 
 button[type="submit"] {
@@ -207,4 +288,121 @@ button[type="submit"].disabled {
   background-color: #24a343;
   color: #ffffff;
   border: none;
+}
+
+/* Стили для админки */
+
+.admin-wrapper {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 60px;
+  border: 1px solid;
+}
+
+.admin-wrapper input {
+  min-height: 40px;
+}
+
+.admin-button {
+  margin-top: 10px;
+  width: 100%;
+  display: block;
+  cursor: pointer;
+  padding: 10px 10px;
+}
+
+.admin-button[data-type="error"] {
+  background-color: rgba(245, 42, 42, 0.841);
+}
+
+.admin-grid {
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+@media screen and (max-width: 1200px) {
+  .admin-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .admin-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.admin-grid-item {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: rgb(238, 238, 238);
+}
+
+.admin-cell {
+  padding: 10px;
+  background-color: rgb(215, 215, 215);
+}
+
+.admin-cell span {
+  font-weight: 600;
+}
+
+.admin-grid-item button {
+  background-color: rgb(119, 101, 220);
+  color: white;
+}
+
+.admin-cell.new {
+  background-color: #24a34444;
+}
+
+.admin-cell.sended {
+  background-color: #2481a344;
+}
+
+.admin-cell.error {
+  background-color: #a3242444;
+}
+
+/* Header styles */
+
+.header {
+  z-index: 99;
+  background-color: rgb(255, 253, 248);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.header__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__item {
+  text-transform: uppercase;
+  font-family: "snowstorm";
+  font-size: 20px;
+  line-height: 130%;
+  margin: 0 25px;
+  list-style: none;
+}
+.header__item a {
+  color: #000;
+  text-decoration: none;
+}
+.header__item a:hover {
+  color: #b32218;
+}
+.header__logo__wrapper {
+  list-style: none;
+  margin: 0 120px;
+}
+.header__logo {
+  max-height: 96px;
 }
