--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ body {
 
 .quiz-wrapper {
   overflow-y: auto;
-  margin: 120px 0;
+  margin: 60px 0;
 }
 
 .disabled {
@@ -375,7 +375,7 @@ button[type="submit"].disabled {
   z-index: 99;
   background-color: rgb(255, 253, 248);
   width: 100%;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
 }
@@ -427,5 +427,10 @@ button[type="submit"].disabled {
     text-align: center;
     order: -1;
     flex: 1 0 100%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .card {
+    padding: 30px;
   }
 }
